--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
     <section id="games">
         <h2>Наші ігри</h2>
-        <div class="match">TRYUGOLNIK x:x Назва команди<br>Дата: 01.06.2025 | Час: 14:00</div>
-        <div class="match">TRYUGOLNIK x:x Назва команди<br>Дата: 25.05.2025 | Час: 16:00</div>
-        <div class="match">TRYUGOLNIK x:x Назва команди<br>Дата: 20.05.2025 | Час: 18:00</div>
-        <div class="match">TRYUGOLNIK x:x Назва команди<br>Дата: 12.05.2025 | Час: 15:30</div>
-        <div class="match">TRYUGOLNIK x:x Назва команди<br>Дата: 05.05.2025 | Час: 13:00</div>
+        <div class="match">F.C. TRYUGOLNIK x:x <br>Дата: 01.06.2025 | Час: 14:00</div>
+        <div class="match">F.C. TRYUGOLNIK x:x ФК Чорнобривці<br>Дата: 25.05.2025 | Час: 16:00</div>
+        <div class="match">F.C. TRYUGOLNIK x:x Назва команди<br>Дата: 20.05.2025 | Час: 18:00</div>
+        <div class="match">F.C. TRYUGOLNIK x:x Назва команди<br>Дата: 12.05.2025 | Час: 15:30</div>
+        <div class="match">F.C. TRYUGOLNIK x:x Назва команди<br>Дата: 05.05.2025 | Час: 13:00</div>
     </section>
 
     <section id="team">
