--- a/index.html
+++ b/index.html
@@ -1,116 +1,133 @@
 
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F.C. TRYUGOLNIK</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-        }
-        header {
-            background-color: #000;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #343a40;
-            flex-wrap: wrap;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 1rem;
-            display: block;
-        }
-        nav a:hover {
-            background-color: #495057;
-        }
-        section {
-            padding: 1rem;
-            max-width: 1000px;
-            margin: auto;
-        }
-        .match, .player {
-            background: #fff;
-            padding: 1rem;
-            margin-bottom: 1rem;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.05);
-        }
-        .player span {
-            display: inline-block;
-            min-width: 120px;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background-color: #212529;
-            color: white;
-        }
-        @media (max-width: 600px) {
-            nav a {
-                flex: 1 1 100%;
-                text-align: center;
-            }
-            .player span {
-                display: block;
-                min-width: auto;
-                margin-bottom: 5px;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>F.C. TRYUGOLNIK</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f0f0;
+      color: #333;
+    }
+    header {
+      background-color: #222;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #333;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    nav a {
+      color: white;
+      padding: 14px 20px;
+      text-decoration: none;
+      display: block;
+    }
+    nav a:hover {
+      background-color: #555;
+    }
+    .container {
+      padding: 20px;
+    }
+    .games, .roster, .media {
+      margin-bottom: 40px;
+    }
+    .game {
+      background-color: #fff;
+      margin-bottom: 10px;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+    .player {
+      margin-bottom: 5px;
+    }
+    .position {
+      font-style: italic;
+      color: #555;
+    }
+    .media a {
+      display: inline-block;
+      margin-top: 10px;
+      color: #0077b5;
+    }
+    .photos {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .photos img {
+      width: 100%;
+      max-width: 200px;
+      border-radius: 8px;
+    }
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+      }
+      .photos {
+        justify-content: center;
+      }
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>F.C. TRYUGOLNIK</h1>
-    </header>
+  <header>
+    <h1>F.C. TRYUGOLNIK</h1>
+  </header>
+  <nav>
+    <a href="#games">Наші ігри</a>
+    <a href="#roster">Склад</a>
+    <a href="#media">Instagram</a>
+  </nav>
 
-    <nav>
-        <a href="#games">Наші ігри</a>
-        <a href="#team">Склад команди</a>
-        <a href="#instagram">Instagram</a>
-    </nav>
-
-    <section id="games">
-        <h2>Наші ігри</h2>
-        <div class="match">F.C. TRYUGOLNIK x:x <br>Дата: 01.06.2025 | Час: 14:00</div>
-        <div class="match">F.C. TRYUGOLNIK x:x ФК Чорнобривці<br>Дата: 25.05.2025 | Час: 16:00</div>
-        <div class="match">F.C. TRYUGOLNIK x:x Назва команди<br>Дата: 20.05.2025 | Час: 18:00</div>
-        <div class="match">F.C. TRYUGOLNIK x:x Назва команди<br>Дата: 12.05.2025 | Час: 15:30</div>
-        <div class="match">F.C. TRYUGOLNIK x:x Назва команди<br>Дата: 05.05.2025 | Час: 13:00</div>
+  <div class="container">
+    <section id="games" class="games">
+      <h2>Наші ігри</h2>
+      <div class="game">F.C. TRYUGOLNIK 5:5 (Пенальті 3:2) ФК Чорнобривці — 25.05.2025/div>
+      <div class="game">F.C. TRYUGOLNIK x:x Команда — Дата</div>
+      <div class="game">F.C. TRYUGOLNIK x:x Команда — Дата</div>
+      <div class="game">F.C. TRYUGOLNIK x:x Команда — Дата</div>
+      <div class="game">F.C. TRYUGOLNIK x:x Команда — Дата</div>
     </section>
 
-    <section id="team">
-        <h2>Склад команди</h2>
-        <div class="player"><span>Forint</span> #1, GK</div>
-        <div class="player"><span>Migovk</span> #4, ЦЗ</div>
-        <div class="player"><span>Seleshi</span> #3, ЦЗ</div>
-        <div class="player"><span>Magochi</span> #6, ЛЗ</div>
-        <div class="player"><span>Neboga</span> #5, ПЗ</div>
-        <div class="player"><span>Hudak</span> #19, ЛП</div>
-        <div class="player"><span>Sava</span> #18, ЦП (Дітина ДЦП)</div>
-        <div class="player"><span>Martini</span> #22, ПП</div>
-        <div class="player"><span>Tokach Jr</span> #11, ЛВ</div>
-        <div class="player"><span>Monda</span> #9, НАП</div>
-        <div class="player"><span>Bohashr</span> #10, ПВ</div>
-        <div class="player"><strong>Менеджер:</strong> Bulavinov Jr</div>
-        <div class="player"><strong>Запасні:</strong> Всі інші</div>
+    <section id="media" class="media">
+      <h2>Фото & Instagram</h2>
+      <div class="photos">
+        <img src="https://via.placeholder.com/200x150" alt="Game photo 1">
+        <img src="https://via.placeholder.com/200x150" alt="Game photo 2">
+        <img src="https://via.placeholder.com/200x150" alt="Game photo 3">
+      </div>
+      <a href="https://www.instagram.com/fc_tryugolnik_/" target="_blank">Перейти в Instagram</a>
     </section>
 
-    <section id="instagram">
-        <h2>Наш Instagram</h2>
-        <p>Слідкуйте за нами у Instagram: <a href="https://www.instagram.com/fc_tryugolnik_/" target="_blank">@fc_tryugolnik_</a></p>
+    <section id="roster" class="roster">
+      <h2>Склад команди</h2>
+      <div class="player">Forint — 1, <span class="position">Голкіпер (GK)</span></div>
+      <div class="player">Migovk — 4, <span class="position">ЦЗ</span></div>
+      <div class="player">Seleshi — 3, <span class="position">ЦЗ</span></div>
+      <div class="player">Magochi — 6, <span class="position">ЛЗ</span></div>
+      <div class="player">Neboga — 5, <span class="position">ПЗ</span></div>
+      <div class="player">Hudak — 19, <span class="position">ЛП</span></div>
+      <div class="player">Sava — 18, <span class="position">ЦП (Дитина ДЦП)</span></div>
+      <div class="player">Martini — 22, <span class="position">ПП</span></div>
+      <div class="player">Tokach Jr — 11, <span class="position">ЛВ</span></div>
+      <div class="player">Monda — 9, <span class="position">НАП</span></div>
+      <div class="player">Bohashr — 10, <span class="position">ПВ</span></div>
+      <div class="player"><strong>Менеджер:</strong> Bulavinov Jr</div>
+      <div class="player"><strong>Запасні:</strong> усі інші</div>
     </section>
-
-    <footer>
-        &copy; 2025 F.C. TRYUGOLNIK. Усі права захищені.
-    </footer>
+  </div>
 </body>
 </html>
