--- a/index.html
+++ b/index.html
@@ -112,21 +112,21 @@
       <a href="https://www.instagram.com/fc_tryugolnik_/" target="_blank">Перейти в Instagram</a>
     </section>
 
-    <section id="roster" class="roster">
-      <h2>Склад команди</h2>
-      <div class="player">Forint — 1, <span class="position">Голкіпер (GK)</span></div>
-      <div class="player">Migovk — 4, <span class="position">ЦЗ</span></div>
-      <div class="player">Seleshi — 3, <span class="position">ЦЗ</span></div>
-      <div class="player">Magochi — 6, <span class="position">ЛЗ</span></div>
-      <div class="player">Neboga — 5, <span class="position">ПЗ</span></div>
-      <div class="player">Hudak — 19, <span class="position">ЛП</span></div>
-      <div class="player">Sava — 18, <span class="position">ЦП (Дитина ДЦП)</span></div>
-      <div class="player">Martini — 22, <span class="position">ПП</span></div>
-      <div class="player">Tokach Jr — 11, <span class="position">ЛВ</span></div>
-      <div class="player">Monda — 9, <span class="position">НАП</span></div>
-      <div class="player">Bohashr — 10, <span class="position">ПВ</span></div>
-      <div class="player"><strong>Менеджер:</strong> Bulavinov Jr</div>
-      <div class="player"><strong>Запасні:</strong> усі інші</div>
+    <section id="team">
+        <h2>Склад команди</h2>
+        <div class="player"><span>Forint</span> #1, GK</div>
+        <div class="player"><span>Migovk</span> #4, ЦЗ</div>
+        <div class="player"><span>Seleshi</span> #3, ЦЗ</div>
+        <div class="player"><span>Magochi</span> #6, ЛЗ</div>
+        <div class="player"><span>Neboga</span> #5, ПЗ</div>
+        <div class="player"><span>Hudak</span> #19, ЛП</div>
+        <div class="player"><span>Sava</span> #18, ЦП (Дітина ДЦП)</div>
+        <div class="player"><span>Martini</span> #22, ПП</div>
+        <div class="player"><span>Tokach Jr</span> #11, ЛВ</div>
+        <div class="player"><span>Monda</span> #9, НАП</div>
+        <div class="player"><span>Bohashr</span> #10, ПВ</div>
+        <div class="player"><strong>Менеджер:</strong> Bulavinov Jr</div>
+        <div class="player"><strong>Запасні:</strong> Всі інші</div>
     </section>
   </div>
 </body>
