--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
       max-width: 200px;
       border-radius: 8px;
     }
+.games, .roster, .media {
+      margin-bottom: 40px;
+
     @media (max-width: 600px) {
       nav {
         flex-direction: column;
@@ -120,7 +123,7 @@
         <div class="player"><span>Magochi</span> #6, ЛЗ</div>
         <div class="player"><span>Neboga</span> #5, ПЗ</div>
         <div class="player"><span>Hudak</span> #19, ЛП</div>
-        <div class="player"><span>Sava</span> #18, ЦП (Дітина ДЦП)</div>
+        <div class="player"><span>Sava</span> #18, ЦП</div>
         <div class="player"><span>Martini</span> #22, ПП</div>
         <div class="player"><span>Tokach Jr</span> #11, ЛВ</div>
         <div class="player"><span>Monda</span> #9, НАП</div>
