--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
       background: #004080;
       color: white;
     }
+.players {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 
     @media (max-width: 600px) {
       nav a {
