--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
       gap: 1rem;
     }
 
-    .player {
-      background: white;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
+   .players {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
     footer {
       text-align: center;
