--- a/index.html
+++ b/index.html
@@ -102,24 +102,19 @@
   <main>
     <section id="games">
       <h2>Наші ігри</h2>
-      <div class="game"><strong>TRYUGOLNIK 2:1 RIVALS</strong><br>Дата: 01.06.2025<br>Час: 17:00</div>
-      <div class="game"><strong>TRYUGOLNIK 0:3 METEOR</strong><br>Дата: 25.05.2025<br>Час: 15:30</div>
-      <div class="game"><strong>TRYUGOLNIK 1:1 TORNADO</strong><br>Дата: 18.05.2025<br>Час: 16:00</div>
-      <div class="game"><strong>TRYUGOLNIK 4:2 FENIX</strong><br>Дата: 11.05.2025<br>Час: 14:00</div>
-      <div class="game"><strong>TRYUGOLNIK 2:2 BLAZERS</strong><br>Дата: 04.05.2025<br>Час: 13:00</div>
-    </section>
+      <div class="game"><strong>F.C. TRYUGOLNIK 5:5 Ф.К. Чорновбривці</strong><br>Дата: 25.05.2025</div>
 
     <section id="squad">
       <h2>Склад команди</h2>
       <div class="players">
         <div class="player">Forint - 1 - GK</div>
         <div class="player">Migovk - 4 - ЦЗ</div>
-        <div class="player">Seleshi - 3 - ЦЗ</div>
+        <div class="player">Seleshi - 15 - ЦЗ</div>
         <div class="player">Magochi - 6 - ЛЗ</div>
         <div class="player">Neboga - 5 - ПЗ</div>
         <div class="player">Hudak - 19 - ЛП</div>
         <div class="player">Sava - 18 - ЦП (Дитина ДЦП)</div>
-        <div class="player">Martini - 22 - ПП</div>
+        <div class="player">Martini - 4 - ПП</div>
         <div class="player">Tokach Jr - 11 - ЛВ</div>
         <div class="player">Monda - 9 - НАП</div>
         <div class="player">Bohashr - 10 - ПВ</div>
