--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
   </main>
   <footer>
     &copy; 2025 F.C. TRYUGOLNIK. Усі права захищені.
+<section id="instagram">
+        <h2>Наш Instagram</h2>
+        <p>Слідкуйте за нами у Instagram: <a href="https://www.instagram.com/fc_tryugolnik_/" target="_blank">@fc_tryugolnik_</a></p>
+    </section>
   </footer>
 </body>
 </html>
