--- a/index.html
+++ b/index.html
@@ -132,17 +132,16 @@
       <h2>Склад команди</h2>
       <div class="players">
         <div class="player">Forint - 1 - GK</div>
-        <div class="player">Migovk - 4 - ЦЗ</div>
-        <div class="player">Seleshi - 12 - ЦЗ</div>
-        <div class="player">Magochi - 6 - ЛЗ</div>
-        <div class="player">Neboga - 5 - ПЗ</div>
-        <div class="player">Hudak - 19 - ЛП</div>
-        <div class="player">Sava - 18 - ЦП </div>
-        <div class="player">Martini - 2 - ПП</div>
-        <div class="player">Tokach Jr - 11 - ЛВ</div>
-        <div class="player">Monda - 9 - НАП</div>
-        <div class="player">Bohashr - 10 - ПВ</div>
-        <div class="player"><strong>Менеджер:</strong> Bulavinov Jr</div>
+        <div class="player">Migovk - 4 - CB</div>
+        <div class="player">Neboga - 3 - CB</div>
+        <div class="player">Seleshi - 12 - RB</div>
+        <div class="player">Magochi - 6 - LB</div>
+        <div class="player">Martini - 2 - LM</div>
+        <div class="player">Sava - 18 - CM</div>
+        <div class="player">Hudak - 8 - RM</div>
+        <div class="player">Tokach Jr - 11 - LW</div>
+        <div class="player">Bulavinov Jr - 9 - ST</div>
+        <div class="player">Bohashr - 10 - RW</div>
         <div class="player"><strong>Заміна:</strong> всі інші</div>
       </div>
     </section>
